# InFlux

./: .coderabbit.yaml  .gitignore  API_REFERENCE.md  API_VERSIONING_POLICY.md  ARCHITECTURE_OVERVIEW.md  BACKUP_AND_RESTORE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  DISASTER_RECOVERY_PLAN.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_INDEX.md  ENGINEERING_STANDARDS.md  GENESIS_CONFIGURATION.md  IMPLEMENTATION_ROADMAP.md  INCIDENT_RESPONSE_PLAYBOOK.md  MAINNET_DEPLOYMENT_RUNBOOK.md  MESSAGE_PROTOCOL.md  MONITORING_AND_ALERTING.md  NETWORK_CAPACITY_PLANNING.md  NETWORK_PACKET_FORMAT.md  NODE_CONFIGURATION.md  OPERATIONS_MANUAL.md  PERFORMANCE_TUNING_GUIDE.md  PROJECT_STATE.md  README.md  RELEASE_MANAGEMENT_GUIDE.md  REPOSITORY_READINESS_REPORT.md  ROADMAP.md  RPC_SPECIFICATION.md  SDK_DEVELOPMENT_GUIDE.md  SECURITY.md  SYNC_OPS_AUDIT_LADDER.md  TESTNET_DEPLOYMENT_RUNBOOK.md  TESTNET_OPERATOR_GUIDE.md  UPGRADE_AND_MIGRATION_GUIDE.md  VALIDATOR_CERTIFICATION.md  VALIDATOR_OPERATOR_GUIDE.md  WALLET_INTEGRATION_GUIDE.md  (+15 more)
.devcontainer/: Dockerfile  devcontainer.json
docs/: INDEX.md  PROJECT_BLUEPRINT.md  README.md  wallet_hardening.md  wallet_key_management.md
harness/: README.md  assertion_layer.py  metrics_collector.py  node_mesh_simulator.py  replay_engine.py  report_generator.py  scenario_engine.py
scenarios/: low_adoption.json  rapid_growth.json  reserve_stress.json  steady_growth.json  validator_dropout.json
scripts/: analyze_logs.py  build_docs.sh  dev.sh  generate_demo_ledger.py  generate_v06_economic_audit_pdf.py  run_tests.sh  (+2 more)
(+3005 files in other folders)
