[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "influx"
version = "0.1.0"
description = "InFlux Ledger + Consensus System"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "requests",
    "uvicorn"
]

[project.scripts]
influx = "influx.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
